# media_storage

./: .gitignore  README.md
services/backend/: pyproject.toml
services/backend/src/: config.py
services/backend/src/application/common/constants/: event.py
services/backend/src/application/google_drive/: service.py
services/backend/src/infrastructure/database/models/: base.py  event.py  media.py
services/backend/src/presentation/: main.py
services/backend/src/presentation/controllers/: event.py  file.py  media.py
services/backend/src/presentation/requests/: event.py  media.py
services/backend/src/presentation/responses/: media.py
